--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,23 @@ annotated-types==0.7.0
 anyio==4.4.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
+cffi==1.17.1
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.1
+distlib==0.3.8
 fastapi==0.114.0
+filelock==3.15.4
 h11==0.14.0
+identify==2.6.0
 idna==3.8
+mypy==1.11.2
+mypy-extensions==1.0.0
+nodeenv==1.9.1
+platformdirs==4.2.2
+pre-commit==3.8.0
+pycparser==2.22
 pydantic==2.9.0
 pydantic_core==2.23.2
 PyYAML==6.0.2
@@ -15,7 +27,14 @@ requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.38.4
+types-cffi==1.16.0.20240331
+types-pyOpenSSL==24.1.0.20240722
+types-PyYAML==6.0.12.20240808
+types-redis==4.6.0.20240903
+types-requests==2.32.0.20240907
+types-setuptools==74.1.0.20240907
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.6
+virtualenv==20.26.3
